Fix the strange scrollbars issue on animations

--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -1,11 +1,10 @@
 // Global styling classes.
-
 @import "styles/mixins/font";
-@import './styles/mixins/buttons';
+@import 'styles/mixins/buttons';
 
-@import "./styles/page";
-@import "./styles/icons";
-@import './styles/questionnaire';
+@import "styles/page";
+@import "styles/icons";
+@import 'styles/questionnaire';
 
 @import 'styles/_spinner';
 @import 'styles/_error';
@@ -15,4 +14,9 @@ html, body {
   overflow-y: visible;
   font-family: $font-family;
   margin: 0;
+}
+
+html {
+  height: 100vh;
+  overflow-x: hidden;
 }
